TARA2-25 review fixes